Fix links and very small screen table overflow issue.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -217,6 +217,8 @@ pre {
 /**
  * Tables
  */
+
+// I should extract some of this into a trail list specific styling.
 table {
   border-collapse: collapse;
   width: 100%;
@@ -229,11 +231,19 @@ table {
   @include media-query($on-laptop) {
     font-size: 14px;
   }
+
+  @include media-query(400px) {
+    font-size: 13px;
+  }
 }
 
 td, th {
   padding: 0.5em;
   text-align: left;
+
+  @include media-query(400px) {
+    padding: 0.4em;
+  }
 }
 
 /* Alternate colors on every other table row for readability */
